--- a/admin_logged_in/index.html
+++ b/admin_logged_in/index.html
@@ -105,7 +105,7 @@ body { font-size:14px; }
 			<nav id="mainnav" class="main-navigation col-md-8 col-sm-6 col-xs-12" role="navigation">
 				<div id="primary-menu" class="menu"><ul>
 <li class="page_item page-item-2"><a href="#">Home</a></li>
-<li class="page_item page-item-21"><a href="industrial_visit.html">Industrial Visit</a></li>
+<li class="page_item page-item-21"><a href="create_fac_acc.php"">Create Faculty Account</a></li>
 <li class="page_item page-item-23"><a href="quiz.html">Quiz</a></li>
 <li class="page_item page-item-25"><a href="kcenter.html">Knowledge Centre</a></li>
 <li class="page_item page-item-27"><a href="../index.html">Logout</a></li>
@@ -119,7 +119,7 @@ body { font-size:14px; }
 		<div class="header-info">
 
 			<div class="container">
-<a class="button header-button create_fac_acc_button" href="create_fac_acc.php">Create Faculty<br>&emsp;Account</a>
+<!-- <a class="button header-button create_fac_acc_button" href="create_fac_acc.php">Create Faculty<br>&emsp;Account</a> -->
 				<h4 class="header-subtext">Sky isn't the limit.Space is limitless!!!</h4>
 				
 				<h3 class="header-text">Spacenext</h3><a class="button header-button" href="#explore">Explore</a>
@@ -189,7 +189,7 @@ body { font-size:14px; }
 				
 						<div class="footer-info">
 			<div class="container">
-				<div class="footer-branding"><h2 class="site-title-footer"><a href="http://localhost/wordpress/" rel="home">SpaceNext</a></h2></div>				<div class="footer-contact"><div class="footer-contact-block"><i class="fa fa-home"></i><span> Bangalore 560-231</span></div><div class="footer-contact-block"><i class="fa fa-envelope"></i><span><a href="mailto:contact@spacenext.org">contact@spacenext.org</a></span></div><div class="footer-contact-block"><i class="fa fa-phone"></i><span>080-2508-4470</span></div></div>			</div>
+				<div class="footer-branding"><h2 class="site-title-footer"><a href="#" rel="home">SpaceNext</a></h2></div>				<div class="footer-contact"><div class="footer-contact-block"><i class="fa fa-home"></i><span> Bangalore 560-231</span></div><div class="footer-contact-block"><i class="fa fa-envelope"></i><span><a href="mailto:contact@spacenext.org">contact@spacenext.org</a></span></div><div class="footer-contact-block"><i class="fa fa-phone"></i><span>080-2508-4470</span></div></div>			</div>
 		</div>
 
 		<footer id="colophon" class="site-footer" role="contentinfo">	
