--- a/admin_logged_in/quiz.html
+++ b/admin_logged_in/quiz.html
@@ -123,15 +123,15 @@ body { font-size:14px; }
 	<div class="col-md-10">
 					
 				<div class="col-md-4">
-					<a class="button header-button" href="#">Upload School<br>&emsp;&emsp;&emsp;Quiz</a>
+					<a class="button header-button book_button" href="#">Upload School<br>&emsp;&emsp;&emsp;Quiz</a>
 				</div>
 			
 				<div class="col-md-4">
-					<a class="button header-button" href="#">Upload Under<br> Graduate Quiz</a>
+					<a class="button header-button book_button" href="#">Upload Under<br> Graduate Quiz</a>
 				</div>
 			
 				<div class="col-md-4">
-					<a class="button header-button" href="#">Upload Post <br>Graduate Quiz</a>
+					<a class="button header-button book_button" href="#">Upload Post <br>Graduate Quiz</a>
 				</div>
 		
 	</div>
