--- a/fac_reg.html
+++ b/fac_reg.html
@@ -221,16 +221,12 @@ body { font-size:14px; }
 			<br>
 			<br>
 
-
-
-
-
 			<br><br>
 			<br>
 
 			<div class="col-md-5"></div>
 			<div>
-				<input type="submit" id="submit_button" value="Submit" name="submit" class="submit_button" />
+				<input type="submit" id="submit_button" value="Submit" name="submit" class="submit_button" style="margin-left: 15px;" />
 			</div>
 			<br><br>
 			<br><br>
@@ -240,8 +236,8 @@ body { font-size:14px; }
 	</form>
 
 
-		<div class="col-md-4 "></div>
-		<button onclick="validate_phone_no()" class="validate_button">Validate Phone No.</button>
+		<div class="col-md-5 "></div>
+		<button onclick="validate_phone_no()" class="validate_button">Validate</button>
 
 </div>
 
