--- a/management_logged_in/industrial_visit.html
+++ b/management_logged_in/industrial_visit.html
@@ -133,7 +133,7 @@ body { font-size:14px; }
 	</p>
 
 <div>
-	<a class="button header-button" href="#" style="margin-bottom: 100px;">View Applications</a>
+	<a class="button header-button book_button" href="#" style="margin-bottom: 100px;">View Applications</a>
 </div>
 
 
