--- a/student_logged_in/quiz.html
+++ b/student_logged_in/quiz.html
@@ -123,15 +123,15 @@ body { font-size:14px; }
 	<div class="col-md-10">
 					
 				<div class="col-md-4">
-					<a class="button header-button" href="#">School</a>
+					<a class="button header-button book_button" href="#">School</a>
 				</div>
 			
 				<div class="col-md-4">
-					<a class="button header-button" href="#">Under Graduate</a>
+					<a class="button header-button book_button" href="#">Under Graduate</a>
 				</div>
 			
 				<div class="col-md-4">
-					<a class="button header-button" href="#">Post Graduate</a>
+					<a class="button header-button book_button" href="#">Post Graduate</a>
 				</div>
 		
 	</div>
