--- a/faculty_logged_in/index.html
+++ b/faculty_logged_in/index.html
@@ -151,7 +151,7 @@ body { font-size:14px; }
 				
 						<div class="footer-info">
 			<div class="container">
-				<div class="footer-branding"><h2 class="site-title-footer"><a href="http://localhost/wordpress/" rel="home">SpaceNext</a></h2></div>				<div class="footer-contact"><div class="footer-contact-block"><i class="fa fa-home"></i><span> Bangalore 560-231</span></div><div class="footer-contact-block"><i class="fa fa-envelope"></i><span><a href="mailto:contact@spacenext.org">contact@spacenext.org</a></span></div><div class="footer-contact-block"><i class="fa fa-phone"></i><span>080-2508-4470</span></div></div>			</div>
+				<div class="footer-branding"><h2 class="site-title-footer"><a href="#" rel="home">SpaceNext</a></h2></div>				<div class="footer-contact"><div class="footer-contact-block"><i class="fa fa-home"></i><span> Bangalore 560-231</span></div><div class="footer-contact-block"><i class="fa fa-envelope"></i><span><a href="mailto:contact@spacenext.org">contact@spacenext.org</a></span></div><div class="footer-contact-block"><i class="fa fa-phone"></i><span>080-2508-4470</span></div></div>			</div>
 		</div>
 
 		<footer id="colophon" class="site-footer" role="contentinfo">	
