--- a/management_logged_in/quiz.html
+++ b/management_logged_in/quiz.html
@@ -123,15 +123,15 @@ body { font-size:14px; }
 	<div class="col-md-10">
 					
 				<div class="col-md-4">
-					<a class="button header-button" onclick="alertf()">School</a>
+					<a class="button header-button book_button" onclick="alertf()">School</a>
 				</div>
 			
 				<div class="col-md-4">
-					<a class="button header-button" onclick="alertf()">Under Graduate</a>
+					<a class="button header-button book_button" onclick="alertf()">Under Graduate</a>
 				</div>
 			
 				<div class="col-md-4">
-					<a class="button header-button" onclick="alertf()">Post Graduate</a>
+					<a class="button header-button book_button" onclick="alertf()">Post Graduate</a>
 				</div>
 		
 	</div>
