--- a/quiz.html
+++ b/quiz.html
@@ -123,15 +123,15 @@ body { font-size:14px; }
 	<div class="col-md-10">
 					
 				<div class="col-md-4">
-					<a class="button header-button" href="stu_login.php">School</a>
+					<a class="button header-button book_button" href="stu_login.php">School</a>
 				</div>
 			
 				<div class="col-md-4">
-					<a class="button header-button" href="stu_login.php">Under Graduate</a>
+					<a class="button header-button book_button" href="stu_login.php">Under Graduate</a>
 				</div>
 			
 				<div class="col-md-4">
-					<a class="button header-button" href="stu_login.php">Post Graduate</a>
+					<a class="button header-button book_button" href="stu_login.php">Post Graduate</a>
 				</div>
 		
 	</div>
