--- a/student_logged_in/industrial_visit.html
+++ b/student_logged_in/industrial_visit.html
@@ -133,7 +133,7 @@ body { font-size:14px; }
 	</p>
 
 <div>
-	<a class="button header-button" onclick="alertf()" style="margin-bottom: 100px;">Book Now</a>
+	<a class="button header-button book_button" onclick="alertf()" style="margin-bottom: 100px;">Book Now</a>
 </div>
 
 <script type="text/javascript">
