--- a/student_logged_in/kcenter.html
+++ b/student_logged_in/kcenter.html
@@ -14,6 +14,7 @@
 <link rel="stylesheet" type="text/css" href="fac_login.css">
 <link rel="alternate" type="application/rss+xml" title="SpaceNext » Feed" href="http://localhost/wordpress/feed/">
 <link rel="alternate" type="application/rss+xml" title="SpaceNext » Comments Feed" href="http://localhost/wordpress/comments/feed/">
+<link rel="stylesheet" type="text/css" href="fac_login.css">
 <link rel="stylesheet" id="bootstrap-css" href="./index_files/bootstrap.min.css" type="text/css" media="all">
 <link rel="stylesheet" id="astrid-style-css" href="./index_files/style.css" type="text/css" media="all">
 <style id="astrid-style-inline-css" type="text/css">
@@ -165,7 +166,7 @@ body { font-size:14px; }
 
 	<br><br>
 
-	<a class="button header-button" href="#" style="margin-bottom: 100px">View Research Papers</a>
+	<a class="button header-button book_button" href="#" style="margin-bottom: 100px">View Research Papers</a>
 
 </body>
 </html>
