--- a/management_logged_in/kcenter.html
+++ b/management_logged_in/kcenter.html
@@ -164,7 +164,12 @@ body { font-size:14px; }
 	</div>
 
 	<br><br>
-	<a class="button header-button book_button" href="#" style="margin-bottom: 100px">View Research Papers</a>
-
+	<a class="button header-button book_button" onclick="func()" href="#" style="margin-bottom: 100px">View Research Papers</a>
+<script type="text/javascript">
+	function func()
+	{
+		alert("You need to be logged in as a faculty or student!!");
+	}
+</script>
 </body>
 </html>
