--- a/student_logged_in/kcenter.html
+++ b/student_logged_in/kcenter.html
@@ -166,7 +166,50 @@ body { font-size:14px; }
 
 	<br><br>
 
-	<a class="button header-button book_button" href="#" style="margin-bottom: 100px">View Research Papers</a>
+	<!-- <a class="button header-button book_button" href="kcenter2.php" style="margin-bottom: 100px">View Research Papers</a> -->
+
+	<form method="GET" action="kcenter2.php">
+		<input type="number" name="id">
+		<input type="submit" name="submit" value="View Research Papers">
+	</form>
+
+<?php
+
+    define('DB_HOST', 'localhost');
+    define('DB_NAME', 'spacenext');
+    define('DB_USER', 'root');
+    define('DB_PASS', '');
+
+    $con = mysqli_connect(DB_HOST, DB_USER, DB_PASS) or die("Failed to connect to the database:".mysqli_error($con));
+
+    $db = mysqli_select_db($con, DB_NAME) or die("Failed to connect to the database:".mysqli_error($con));
+
+    $query = "SELECT id, name FROM upload";
+    $result = mysqli_query($con,$query) or die('Error, query failed');
+
+    // $reg_fac=mysqli_fetch_assoc($fac_data);
+
+    // $sr_no = $reg_fac["sr_no"];
+
+    if(mysqli_num_rows($result)==0){
+        echo "Database is empty <br>";
+    }
+    else{
+        while(list($id, $name) = mysqli_fetch_array($result)){
+            echo "$name $id<br>";
+        }
+    }
+
+    if(isset($_GET['id'])){
+        $id    = $_GET['id'];   
+        $query = "SELECT name, type, content FROM upload WHERE id = '$id'";       
+        $result = mysqli_query($con,$query) or die('Error, query failed');
+        list($name, $type,  $content) =  mysqli_fetch_row($con,$result);
+        header("Content-Disposition: attachment; filename=\"$name\"");
+        header("Content-type: $type");
+        print $content;
+    }
+?>
 
 </body>
 </html>
