added iv page image

--- a/admin_logged_in/industrial_visit.html
+++ b/admin_logged_in/industrial_visit.html
@@ -136,7 +136,9 @@ body { font-size:14px; }
 	<a class="button header-button" href="fac_login.html" style="margin-bottom: 100px;">Book Now</a>
 </div>
  -->
-
+<center>
+<img src="../index_files/merlin_vertical.jpg" width="900">
+</center>
 
 </body>
 </html>
