--- a/student_logged_in/industrial_visit.html
+++ b/student_logged_in/industrial_visit.html
@@ -131,7 +131,9 @@ body { font-size:14px; }
 		Friction welding involves a high speed rubbing together of metal parts rather than the application of external heat to melt the parts. The technique should result in stronger welds. ISIS has allowed us to confirm this by measuring the internal stresses induced by the process to confirm the final weld quality.
 
 	</p>
-
+<center>
+<img src="../index_files/merlin_vertical.jpg" width="900">
+</center>
 <div>
 	<a class="button header-button book_button" onclick="alertf()" style="margin-bottom: 100px;">Book Now</a>
 </div>
