--- a/faculty_logged_in/industrial_visit.html
+++ b/faculty_logged_in/industrial_visit.html
@@ -139,6 +139,11 @@ body { font-size:14px; }
 	<!-- <a class="button header-button book_button" data-toggle="modal" data-target="#myModal" style="margin-bottom: 50px;">View My Applications</a>
 	<button type="button" class="btn btn-info btn-lg " data-toggle="modal" data-target="#myModal">Open Modal</button>
 </div> -->
+
+<center>
+<img src="../index_files/merlin_vertical.jpg" width="900">
+</center>
+
 <center>
 	
 	<button type="button" class="btn btn-info btn-lg button header-button book_button" data-toggle="modal" data-target="#myModal" style="margin-bottom: 50px; border-radius: 0px;">View Application Status</button>
