--- a/industrial_visit.html
+++ b/industrial_visit.html
@@ -132,11 +132,14 @@ body { font-size:14px; }
 
 	</p>
 
+
+<center>
+<img src="./index_files/merlin_vertical.jpg" width="900">
+</center>
+
 <div>
 	<a class="button header-button book_button" href="fac_login.html" style="margin-bottom: 100px;">Book Now</a>
 </div>
-
-
 
 </body>
 </html>
