--- a/stu_reg.html
+++ b/stu_reg.html
@@ -134,7 +134,7 @@ body { font-size:14px; }
 				<label >Username:</label>
 			</div>
 			<div class="col-md-5 ">
-				<input type="text" name="uname" class="inputc" required>
+				<input type="text" name="uname" class="inputc" required maxlength="15">
 			</div>
 		</div>
 		<div class="row fields">
@@ -152,7 +152,7 @@ body { font-size:14px; }
 				<label >Password:</label>
 			</div>
 			<div class="col-md-5 ">
-				<input type="Password" name="pass" class="inputc" required>
+				<input type="Password" name="pass" class="inputc" required maxlength="15">
 			</div>
 		</div>
 		<br>
