--- a/admin_logged_in/kcenter.html
+++ b/admin_logged_in/kcenter.html
@@ -78,7 +78,7 @@ body { font-size:14px; }
 		<div class="container">
 			<div class="site-branding col-md-4 col-sm-6 col-xs-12">
 				<h1 class="site-title"><a href="#" rel="home">SpaceNext</a></h1><p class="site-description"></p>			</div>
-			<div class="btn-menu col-md-8 col-sm-6 col-xs-12"><i class="fa fa-navicon"></i></div>
+			<div class="btn-menu col-md-8 col-sm-6 col-xs-12"><i class="fa fa-navicon"><img class="nav-icon" src="../index_files/ham_icon.png" alt=""></i></div>
 			<nav id="mainnav" class="main-navigation col-md-8 col-sm-6 col-xs-12" role="navigation">
 				<div id="primary-menu" class="menu"><ul>
 <li class="page_item page-item-2"><a href="index.html">Home</a></li>
@@ -90,6 +90,12 @@ body { font-size:14px; }
 			</nav>
 		</div>
 	</header>
+    <style>
+    .nav-icon{
+        width: 25px;
+        height: 20px;
+    }
+    </style>
 			<div class="header-image">
 
 
@@ -178,10 +184,10 @@ body { font-size:14px; }
 		<div class="col-md-10">
 			<form class="form" method="post" enctype="multipart/form-data" action="kcenter.php" style="margin-bottom: 100px;">
 			<table width="350" border="0" cellpadding="1" cellspacing="1" class="box" >
-			<tr> 
+			<tr>
 			<td width="246">
 			<input type="hidden" name="MAX_FILE_SIZE" value="2000000">
-			<input name="userfile" type="file" id="userfile"> 
+			<input name="userfile" type="file" id="userfile">
 			</td>
 			<td width="80"><input name="upload" type="submit" class="box" id="upload" value=" Upload "></td>
 			</tr>
@@ -190,7 +196,7 @@ body { font-size:14px; }
 		</div>
 		<div class="col-md-1"></div>
 	</div>
-	
+
 
 </body>
 </html>
