--- a/fac_reg.html
+++ b/fac_reg.html
@@ -89,7 +89,7 @@ body { font-size:14px; }
 		<div class="container">
 			<div class="site-branding col-md-4 col-sm-6 col-xs-12">
 				<h1 class="site-title"><a href="#" rel="home">SpaceNext</a></h1><p class="site-description"></p>			</div>
-			<div class="btn-menu col-md-8 col-sm-6 col-xs-12"><i class="fa fa-navicon"></i></div>
+			<div class="btn-menu col-md-8 col-sm-6 col-xs-12"><i class="fa fa-navicon"><img class="nav-icon" src="index_files/ham_icon.png" alt=""></i></div>
 			<nav id="mainnav" class="main-navigation col-md-8 col-sm-6 col-xs-12" role="navigation">
 				<div id="primary-menu" class="menu"><ul>
 <li class="page_item page-item-2"><a href="index.html">Home</a></li>
@@ -101,6 +101,12 @@ body { font-size:14px; }
 			</nav>
 		</div>
 	</header>
+    <style>
+    .nav-icon{
+        width: 25px;
+        height: 20px;
+    }
+    </style>
 			<div class="header-image">
 
 
@@ -237,14 +243,14 @@ body { font-size:14px; }
 			<center>
 				<h2 style="color: white; padding-top: 50px; ">Your account will be verified within 24 hrs...</h2>
 			</center>
-		
+
 	</form>
 
 
 		<div class="col-md-5 "></div>
 		<button onclick="validate_phone_no()" class="validate_button">Validate</button>
 
-		
+
 
 </div>
 
