--- a/faculty_logged_in/quiz.html
+++ b/faculty_logged_in/quiz.html
@@ -77,7 +77,7 @@ body { font-size:14px; }
 		<div class="container">
 			<div class="site-branding col-md-4 col-sm-6 col-xs-12">
 				<h1 class="site-title"><a href="#" rel="home">SpaceNext</a></h1><p class="site-description"></p>			</div>
-			<div class="btn-menu col-md-8 col-sm-6 col-xs-12"><i class="fa fa-navicon"></i></div>
+			<div class="btn-menu col-md-8 col-sm-6 col-xs-12"><i class="fa fa-navicon"><img class="nav-icon" src="../index_files/ham_icon.png" alt=""></i></div>
 			<nav id="mainnav" class="main-navigation col-md-8 col-sm-6 col-xs-12" role="navigation">
 				<div id="primary-menu" class="menu"><ul>
 <li class="page_item page-item-2"><a href="index.html">Home</a></li>
@@ -89,6 +89,12 @@ body { font-size:14px; }
 			</nav>
 		</div>
 	</header>
+    <style>
+    .nav-icon{
+        width: 25px;
+        height: 20px;
+    }
+    </style>
 			<div class="header-image">
 
 
@@ -121,19 +127,19 @@ body { font-size:14px; }
 <div class="row">
 	<div class="col-md-1"></div>
 	<div class="col-md-10">
-					
+
 				<div class="col-md-4">
 					<a class="button header-button book_button" onclick="alertf()">School</a>
 				</div>
-			
+
 				<div class="col-md-4">
 					<a class="button header-button book_button" onclick="alertf()">Under Graduate</a>
 				</div>
-			
+
 				<div class="col-md-4">
 					<a class="button header-button book_button" onclick="alertf()">Post Graduate</a>
 				</div>
-		
+
 	</div>
 	<div class="col-md-1"></div>
 </div>
