--- a/student_logged_in/industrial_visit.html
+++ b/student_logged_in/industrial_visit.html
@@ -75,7 +75,7 @@ body { font-size:14px; }
 		<div class="container">
 			<div class="site-branding col-md-4 col-sm-6 col-xs-12">
 				<h1 class="site-title"><a href="#" rel="home">SpaceNext</a></h1><p class="site-description"></p>			</div>
-			<div class="btn-menu col-md-8 col-sm-6 col-xs-12"><i class="fa fa-navicon"></i></div>
+			<div class="btn-menu col-md-8 col-sm-6 col-xs-12"><i class="fa fa-navicon"><img class="nav-icon" src="../index_files/ham_icon.png" alt=""></i></div>
 			<nav id="mainnav" class="main-navigation col-md-8 col-sm-6 col-xs-12" role="navigation">
 				<div id="primary-menu" class="menu"><ul>
 <li class="page_item page-item-2"><a href="index.html">Home</a></li>
@@ -87,6 +87,12 @@ body { font-size:14px; }
 			</nav>
 		</div>
 	</header>
+    <style>
+    .nav-icon{
+        width: 25px;
+        height: 20px;
+    }
+    </style>
 			<div class="header-image">
 
 
@@ -127,7 +133,7 @@ body { font-size:14px; }
 		The lab has access to a metal-based 3D printer and is equipped with a suite of powerful microscopes, an X-ray CT machine and a range of furnaces. Mechanical testing such as tensile and micro-hardness testing is also performed.
 		Our laboratory aims to assess candidate materials and manufacturing processes for space missions, pre-screening them early in their development cycle. The results obtained helps guide us and the wider space industry in deciding where to focus future technology investments
 		A key aim of the laboratory is to exploit the expertise and world-leading facilities that are available on the Harwell Campus, to assess new material processes, joining techniques and 3D printing technologies for application in space.
-		We’ve already been using STFC’s ISIS pulsed spallation neutron source to investigate the structural integrity of friction stir welded titanium for use in spacecraft propellant tanks.  
+		We’ve already been using STFC’s ISIS pulsed spallation neutron source to investigate the structural integrity of friction stir welded titanium for use in spacecraft propellant tanks.
 		Friction welding involves a high speed rubbing together of metal parts rather than the application of external heat to melt the parts. The technique should result in stronger welds. ISIS has allowed us to confirm this by measuring the internal stresses induced by the process to confirm the final weld quality.
 
 	</p>
